invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_45.src
.IPPcode24
EQ int@49